[package]
name = "zkp-service-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros"] }
reqwest = { version = "0.12.20", features = ["json", "multipart"] }
once_cell = "1.21.3"
ethers = "2.0.14"
md5 = "0.8.0"
serde_urlencoded = "0.7.1"

[dev-dependencies]
chrono = "0.4.41"
